_sass/devlog.scss
body {
  background-color: #d6dde1 !important;
  font-family: "Quicksand", sans-serif !important;
}

header {
  background-color: #f5f5f5;
  box-shadow: 10px 0px 8px;
  height: 200px;
  width: 100%;
  padding: 11px;
}

.container-fluid {
  margin: 0px !important;
  padding: 0px !important;
}

.profile-img {
  width: 150px;
  height: 150px;
  margin-left: 20px;
}

.profile-name {
  margin-top: 20px;
}

.profile-bio,
.profile-links {
  margin-top: 5px;
}

.border {
  border: 1px solid #000;
}

.center {
  text-align: center;
}

.card {
  margin: 20px !important;
  padding: 20px !important;
}

.social-link {
  color: #262222;
  font-size: 15px;
  padding: 5px;
  margin: 2px;
}

#navigation {
  margin-top: 50px;
}

.nav-link {
  font-size: 24px !important;
  color: #000;
}

footer {
  width: 100%;
  height: 70px;
  text-align: center;
  padding: 20px;
  background-color: #f5f5f5;
}

.company-logo {
  width: 100px;
  height: 100px;
}

.project-img {
  width: 300px;
  height: 200px;
}

.author-profile-img {
  width: 50px;
  height: 50px;
}

.project-desc {
  float: left;
}

.project-link {
  color: gray;
  font-size: 15px;
}

.card-header {
  border-radius: 0% !important;
}

.blog-post {
  width: 350px;
  height: auto;
  margin: 20px !important;
}

.responsive-table {
  display: block;
  width: 100%;
  overflow-x: auto;
}

pre {
  white-space: pre;
}

pre code {
  white-space: pre;
}

pre,
code {
  overflow: auto;
  // wrap code
  // white-space: pre-wrap; # wrap code
  // prevent wrap code
  white-space: pre;
  word-wrap: break-word;
  word-break: break-all;
  font-family: Courier, monospace;
  font-size: 16px;
  background-color: #f4f6f8;
  padding: 5px;
  display: block;
}

@media (min-width: 320px) and (max-width: 780px) {
  header {
    height: auto;
    text-align: center;
  }
  .blog-post {
    width: 300px;
    height: auto;
    margin-left: -20px !important;
  }
}

